[package]
authors                                 = [ "Mikhail Solovev <icee@icee.ru>" ]
build                                   = "build.rs"
categories                              = [ "external-ffi-bindings" ]
description                             = "Low-level bindings for the Boolector SMT solver"
documentation                           = "https://docs.rs/boolector-sys"
edition                                 = "2018"
homepage                                = "https://github.com/fatemender/boolector-sys"
keywords                                = [ "ffi", "smt" ]
license                                 = "MIT"
name                                    = "boolector-sys"
readme                                  = "README.md"
repository                              = "https://github.com/fatemender/boolector-sys"
version                                 = "0.5.0"

[dependencies]
libc                                    = "0.2.73"
