[package]
authors                                 = ["Mikhail Solovev <icee@icee.ru>"]
build                                   = "build.rs"
categories                              = ["external-ffi-bindings"]
description                             = "Low-level bindings for the Boolector SMT solver"
documentation                           = "https://docs.rs/boolector-sys"
edition                                 = "2018"
homepage                                = "https://github.com/fatemender/boolector-sys"
keywords                                = ["ffi", "smt"]
license                                 = "MIT"
links                                   = "boolector"
name                                    = "boolector-sys"
readme                                  = "README.md"
repository                              = "https://github.com/fatemender/boolector-sys"
version                                 = "0.7.0"

[features]
vendor-lgl                              = ["cc", "cmake", "copy_dir"]

[dependencies]
libc                                    = "0.2.73"

[build-dependencies]
cc                                      = { version = "1.0", optional = true }
cmake                                   = { version = "0.1", optional = true }
copy_dir                                = { version = "0.1.2", optional = true }
