[package]
name = "boolector-build"
version = "0.1.0"
authors = ["finga <finga@onders.org>"]
edition = "2018"
keywords = ["ffi", "src", "smt"]
readme = "README.md"
repository = "https://github.com/fatemender/boolector-sys"
description = "Logic to build Boolector from source"
publish = false

[dependencies]
cc = "1.0"
cmake = "0.1"
